sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-visual-analytics-app/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASVisualAnalytics
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-visual-analytics-app
    sas.com/admin: namespace
  name: sas-visual-analytics-app
spec:
  host: $(INGRESS_HOST)
  path: /SASVisualAnalytics
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-visual-analytics-app
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASVisualAnalytics
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-visual-analytics-app
    sas.com/admin: namespace
  name: sas-visual-analytics-app-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /SASVisualAnalytics
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-visual-analytics-app
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /SASVisualAnalytics
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASReportViewer
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-visual-analytics-app-viewer
    sas.com/admin: namespace
  name: sas-visual-analytics-app-viewer
spec:
  host: $(INGRESS_HOST)
  path: /SASReportViewer
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-visual-analytics-app
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASReportViewer
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-visual-analytics-app-viewer
    sas.com/admin: namespace
  name: sas-visual-analytics-app-viewer-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /SASReportViewer
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-visual-analytics-app-viewer
  wildcardPolicy: Subdomain
